[gd_scene load_steps=25 format=2]

[ext_resource path="res://Images/background.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/IconHygiene.png" type="Texture" id=5]
[ext_resource path="res://Images/IconBottle.png" type="Texture" id=6]
[ext_resource path="res://Images/IconHapiness.png" type="Texture" id=7]
[ext_resource path="res://Images/BarHappiness.png" type="Texture" id=8]
[ext_resource path="res://Images/BorderFood.png" type="Texture" id=9]
[ext_resource path="res://Images/BorderHappiness.png" type="Texture" id=10]
[ext_resource path="res://Images/BarHunger.png" type="Texture" id=11]
[ext_resource path="res://Images/BarHygiene.png" type="Texture" id=12]
[ext_resource path="res://Images/BorderHygiene.png" type="Texture" id=13]
[ext_resource path="res://Audio/tune002.ogg" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 101, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 72 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 160, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2, 48 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1, 21 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 37, 16 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 18, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 27, 15 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 34 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 1 )

[node name="WorldBorders" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorders"]
position = Vector2( 202, 36 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldBorders"]
position = Vector2( 2, 216 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldBorders"]
position = Vector2( 324, 358 )
scale = Vector2( 2, 2 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldBorders"]
position = Vector2( 400, 346 )
scale = Vector2( 2, 2 )
shape = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="WorldBorders"]
position = Vector2( 400, 168 )
scale = Vector2( 2, 2 )
shape = SubResource( 5 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="WorldBorders"]
position = Vector2( 642, 317 )
scale = Vector2( 2, 2 )
shape = SubResource( 7 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="WorldBorders"]
scale = Vector2( 2, 2 )
polygon = PoolVector2Array( 202, 132, 266, 140, 266, 110, 202, 101 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="WorldBorders"]
position = Vector2( 349, 88 )
shape = SubResource( 8 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="WorldBorders"]
position = Vector2( 98, 84 )
shape = SubResource( 9 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 459, 267 )
collision_mask = 5

[node name="Child" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Child"]

[node name="Sprite" type="Sprite" parent="Child"]

[node name="Desk" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Desk"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Desk"]
position = Vector2( 586, 250 )
scale = Vector2( 2, 2 )
shape = SubResource( 6 )

[node name="Milk" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Milk"]

[node name="Sprite" type="Sprite" parent="Milk"]

[node name="Diapers" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Diapers"]

[node name="Sprite" type="Sprite" parent="Diapers"]

[node name="BetweenRooms" type="Area2D" parent="."]
position = Vector2( 414, 274 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BetweenRooms"]
position = Vector2( 0, 24 )
shape = SubResource( 10 )

[node name="GUI" type="Control" parent="."]
margin_top = 296.0
margin_right = 130.0
margin_bottom = 356.0

[node name="Happiness" type="TextureRect" parent="GUI"]
margin_left = 5.0
margin_top = 1.0
margin_right = 19.0
margin_bottom = 15.0
texture = ExtResource( 7 )

[node name="HappinessBar" parent="GUI" instance=ExtResource( 4 )]
margin_left = 23.0
margin_top = 1.0
margin_right = -127.0
margin_bottom = -79.0

[node name="Timer" parent="GUI/HappinessBar" index="0"]
wait_time = 2.0

[node name="TextureProgress" parent="GUI/HappinessBar" index="1"]
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 8 )

[node name="Hunger" type="TextureRect" parent="GUI"]
margin_left = 7.0
margin_top = 17.0
margin_right = 17.0
margin_bottom = 39.0
texture = ExtResource( 6 )

[node name="HungerBar" parent="GUI" instance=ExtResource( 4 )]
margin_left = 25.0
margin_top = 22.0
margin_right = -125.0
margin_bottom = -58.0

[node name="Timer" parent="GUI/HungerBar" index="0"]
wait_time = 2.0

[node name="TextureProgress" parent="GUI/HungerBar" index="1"]
margin_left = -2.0
margin_top = -1.0
margin_right = 100.0
margin_bottom = 13.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 11 )

[node name="Hygiene" type="TextureRect" parent="GUI"]
margin_left = 7.0
margin_top = 41.0
margin_right = 17.0
margin_bottom = 55.0
texture = ExtResource( 5 )

[node name="HygieneBar" parent="GUI" instance=ExtResource( 4 )]
margin_left = 24.0
margin_top = 41.0
margin_right = -126.0
margin_bottom = -39.0

[node name="Timer" parent="GUI/HygieneBar" index="0"]
wait_time = 2.0

[node name="TextureProgress" parent="GUI/HygieneBar" index="1"]
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[editable path="GUI/HappinessBar"]
[editable path="GUI/HungerBar"]
[editable path="GUI/HygieneBar"]
